--- a/js-dispari/index.html
+++ b/js-dispari/index.html
@@ -8,18 +8,13 @@
 </head>
 <body>
     <h1>PARI O DISPARI?</h1>
-
+    <div class="numeroUtente"></div>
+    <div class="numeroAI"></div>
+    <div class="Somma"></div>
+    <div class="Vinto"></div>
+    <div class="Perso"></div>
 <form action="/action_page.php">
-    <label for="cars">Scegli pari o dispari</label>
-    <select name="cars" id="cars">
-        <option value="Pari">Pari</option>
-        <option value="Dispari">Dispari</option>
-    </select>
-    <br><br>
-    <input type="submit" value="Submit">
-</form>
-<p>Click the "Submit" button and the form-data will be sent to a page on the 
-server called "action_page.php".</p>
+    
     <script src="myscript.js"></script>
 </body>
 </html>
