--- a/js-palindromi/index.html
+++ b/js-palindromi/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindromi</title>
 </head>
-<body>
+<body style="background-color: white">
+    <h1 style="color: white;">Palindromi</h1>
     <script src="myscript.js"></script>
 </body>
 </html>
